overflow issue fixed

--- a/stylesheets/sass/style.scss
+++ b/stylesheets/sass/style.scss
@@ -90,10 +90,10 @@ html {
 }
 
 body {
-  width: 100vw;
-  
   padding: 0;
   margin: 0;
+  width: 100%;
+  overflow-x: hidden;
   &::-webkit-scrollbar {
     width: 12px;
   }
@@ -107,11 +107,6 @@ body {
   }
 }
 
-.main{
-  padding: 0;
-  margin: 0;
-  width: 100%;
-}
 
 .section-heading {
   font-family: "Open Sans", sans-serif;
@@ -121,3 +116,11 @@ body {
   color: $text-dark;
 }
 
+@media only screen and (max-width: 480px) {
+  html,body{
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  }
+}
